smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/operations/missing-ws-after-input.smithy
// Parse error at line 6, column 29 near `: `: Expected one or more whitespace characters
$version: "2.0"
namespace smithy.example

operation GetFoo {
    input: GetFooInputoutput: GetFooOutput
}
